# context2html

./:  (Conflicted copy from DESKTOP-480AVGM on 2026-06-29.gitignore  .gitignore  AGENTS.md  CONTEXT.md  README (Conflicted copy from DESKTOP-480AVGM on 2026-06-29.md  README.md  SKILL (Conflicted copy from DESKTOP-480AVGM on 2026-06-29.md  SKILL.md  pyproject.toml  results.tsv  test-prompts.json
.trellis/: .template-hashes.json
components/: 01-SVG 流程图.md  02-角色卡片.md  03-CSS 时间线.md  04-CSS 条形图.md  05-对比表.md  06-SVG Figure 包裹.md  07-PPT 质感增强.md  08-折叠式分步详解.md  09-Tab 切换面板.md  10-图片前后对比滑块.md  11-交互式时间线.md  12-数据卡片网格.md  13-引用引文卡片.md  14-标注式图片.md  15-状态链进度里程碑.md  16-数值滚动动画.md  17-标签徽章组.md  18-提示框告警条.md  19-热力图密度图.md  20-步骤指示器.md  21-信息面板侧边栏.md  22-对比表 增强版.md  23-全屏模态灯箱.md  24-数据图表集.md  25-现代浏览器API组件.md  26-ECharts 交互式图表集.md  27-Three.js 3D组件.md  28-D3.js 数据可视化.md  29-ECharts GL 3D可视化.md  30-GSAP 滚动动画集.md  31-SVG.js 动态图表.md
context2html/: __init__.py  markdown_utils.py  registry.py  renderer.py  theme.py
context2html.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: optimization-result-card.html  theme-index.md
examples/: 0001-demo-report.html  annotated-img-demo.html  bar-chart-demo.html  callout-demo.html  charts-demo.html  cmp-table-basic-demo.html  cmp-table-demo.html  compare-demo.html  countup-demo.html  d3-demo.html  d3-three-demo.html  data-card-demo.html  echarts-demo.html  echarts-gl-demo.html  echarts-gl-map-demo.html  flowchart-demo.html  gsap-demo.html  heatmap-demo.html  hybrid-d3-three-echarts.html  info-panel-demo.html  lbox-demo.html  (+14 more)
(+79 files in other folders)
